# proto-pack

./: .gitignore  Cargo.toml  README.md
protoc-gen-pack/: Cargo.toml
protoc-gen-pack/src/: args.rs  lib.rs  main.rs
